# axonblade

./: .gitignore  CHANGELOG.md  LICENSE  Phases.md  ProjectPlan.md  README.md  axonblade.spec  main.py  pyproject.toml  repl.py
.github/workflows/: release.yml
axonblade/: __main__.py
core/: __init__.py  ast_nodes.py  code_object.py  compiler.py  environment.py  errors.py  evaluator.py  formatter.py  lexer.py  module_loader.py  opcodes.py  parser.py  runtime.py  serializer.py  tokens.py  vm.py
docs/: docs.html  examples.html  index.html  playground.html
docs/docs/: index.html
examples/: classes.axb  closures.axb  datetime_example.axb  dot_methods_example.axb  fibonacci.axb  hello.axb  hello.axbc  http_example.axb  io_example.axb  json_example.axb  life.axb  random_example.axb  regex_example.axb  snake.axb
grid/: grid_object.py  renderer_term.py
playground/: bridge.py  canvas_grid.js  index.html
playground/backend/: README.md  main.py  requirements.txt
stdlib/: builtins.py  datetime.axb  http.axb  io.axb  json.axb  math.axb  random.axb  regex.axb  string.axb
tests/: __init__.py  test_ast_nodes.py  test_evaluator.py  test_formatter.py  test_grid.py  test_lexer.py  test_linter.py  test_parser.py
tests/fixtures/: classes.axb  closures.axb  collections_test.axb  datetime_test.axb  errors.axb  hello.axb  http_test.axb  io_test.axb  json_test.axb  math_test.axb  random_test.axb  regex_test.axb  (+1 more)
tools/: linter.py  test_runner.py
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package.json
website/: examples.html  index.html
(+2 files in other folders)
